Tue Jan 04 10:57:18 2005  George Lebl <jirka@5z.com>

	* configure.in: use an existing mpfr function to check for the
	  library, DUH!

	* src/genius.c: include term.h AFTER everything since that happens to
	  redefine the word 'tab' for it's own very evil purposes on some
	  systems (some ncurses version or some such)

Thu Dec 23 11:03:27 2004  George Lebl <jirka@5z.com>

	* Release 0.7.2

	* help/*: Fix the makefiles

Thu Dec 23 10:45:11 2004  George Lebl <jirka@5z.com>

	* help/C/*.xml: some fixes and use := rather then = in places

Thu Dec 23 10:22:12 2004  George Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: optimize and shorten
	  LUDecomposition

	* src/calc.c: fix output for @(,n) and @(n,)

	* lib/equation_solving/diffeqs.gel: Add EulersMethod and RungeKutta
	  for simple single ode solving

	* help/C/*.xml: update

	* src/geniustests.txt: updated

	* src/gnome-genius.c: add "New" toolbar item

Wed Dec 22 18:01:51 2004  George Lebl <jirka@5z.com>

	* src/funclib.c, help/C/*.xml: Fix then vs. than typos

Wed Dec 22 16:58:23 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: add y= before the entries to make it clear what to
	  type in.

	* src/eval.c: when we encounter a reference to a non-existant
	  variable make the variable in the current context.

	* src/eval.c: fix errors in expensive matrix multiply, now doesn't
	  crash!

	* lib/linear_algebra/linear_algebra.gel: Add LUDecomposition function
	  from David W. Hutchison <dahutchi@indiana.edu>

	* help/C/*.xml: update

Wed Dec 22 14:47:00 2004  George Lebl <jirka@5z.com>

	* help/C/*.xml, help/C/genius.txt: make the text version and fix some
	  typos

Wed Dec 22 14:42:01 2004  George Lebl <jirka@5z.com>

	* lib/number_theory/misc.gel:  Added MoebiusMu from Alessio
	  Frusciante <algol@firenze.linux.it>

	* lib/number_theory/misc.gel:  Fixed parameters of IsNthPower to
	  be less confusing

	* lib/combinatorics/factorial.gel:  Nicer, less heavy argument testing
