@@ -1,3 +1,8 @@
+Tue Jan 04 18:21:36 2005  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: add LinePlotClear and LinePlotDrawLine, but these
+	  are subject to change of course
+
 Tue Jan 04 10:57:18 2005  George Lebl <jirka@5z.com>
 
 	* configure.in: use an existing mpfr function to check for the
